--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="header mat-elevation-z4">
-  <span>My Application</span>
+  <span class="header-child"> Aplicação de teste </span>
 </mat-toolbar>
