--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -1,3 +1,8 @@
 .header{
-  background-color: azure;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+
 }
+
