--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,1 +1,18 @@
-<p>nav works!</p>
+<nav class="navbar navbar-expand-lg menu">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav menu-lista">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#" >Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="fundos">Fundos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="sobre" >Sobre</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
