--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,13 +1,9 @@
-<p>home works!</p>
-
-<div class="d-flex ">
-
-<div style="display: flex; justify-content: space-around;width: 100%;">
-
-<app-card></app-card>
-<app-card></app-card>
-<app-card></app-card>
-
-</div>
+<div class="d-flex mt-5">
+  <div style="display: flex; justify-content: space-around; width: 100%;">
+    <app-card [nomei]="['jhonatan', 'pedrita', 'marrone']" titulo="Risco de Mercado"> </app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+    <app-card></app-card>
+  </div>
 
 </div>
