adicionando consumo de api e exibição

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav menu-lista">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" >Home</a>
+          <a class="nav-link active" aria-current="page" href="home" >Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="fundos">Fundos</a>
