--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.red{
+  background-color: red;
+}
+
+.green{
+  background-color: rgb(75, 129, 25);
+}
