--- a/src/app/components/fundos/ler-fundo/ler-fundo.component.html
+++ b/src/app/components/fundos/ler-fundo/ler-fundo.component.html
@@ -2,7 +2,7 @@
 
   <input type="text" id="input-busca" class="form-control mb-3">
 
-  <table class="table">
+  <!-- <table class="table">
   <thead class="table-dark">
   <tr>
   <th> Nome </th>
@@ -16,7 +16,7 @@
 </thead>
   <tbody id="tabela-fundos">
   <tr *ngFor="let fundo of fundos">
-    <td> <a href="detalhes/sacss"> {{ fundo.nome }} </a> </td>
+    <td> <a href="detalhes/{{fundo.nome}}"> {{ fundo.nome }} </a> </td>
     <td> {{ fundo.mesa }} </td>
     <td [ngClass]="alertColor(fundo.var)"> {{ fundo.var | currency }}</td>
     <td> {{ fundo.alertaVar }} </td>
@@ -26,8 +26,30 @@
          <button type="button" class="btn btn-dark m-1"> Editar </button>
          <button type="button" class="btn btn-danger"> Excluir </button>
     </td>
-
   </tr>
 </tbody>
+</table> -->
+
+<table>
+  <thead>
+    <tr>
+      <th> Nome </th>
+      <th> Var </th>
+    </tr>
+  </thead>
+  <tbody >
+    <tr *ngFor="let dado of dataset">
+      <td>{{ dado }}</td>
+    </tr>
+  </tbody>
 </table>
+
 </div>
+
+<highcharts-chart
+   [Highcharts] = "highcharts"
+   [options] = "chartOptions"
+   style = "width: 100%; height: 400px; display: block;">
+
+  </highcharts-chart>
+
